Fix destroy function for get_entities_async

https://bugs.freedesktop.org/show_bug.cgi?id=37288